syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.atomic.cloud.grpc.common";

package common;

message CommonUser {
  message List {
    repeated Item users = 1;
  }
  message Item {
    string name = 1;
    string id = 2;
    optional string server = 4;
  }
}